Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.5(EOL), 10.6(EOL), 10.7(EOL), 10.8(EOL), 10.9(EOL), 10.10(EOL), 10.11, 11.0(EOL), 11.1(EOL), 11.2(EOL), 11.3(EOL)
Description
In the function srv_start(), there are some optional adjustments for MDEV-11623 as well as something related to innodb_data_file_path. These adjustments would write log records, even though the log has not yet been upgraded to the configured format (create_log_file_rename()).
For example, killing the server at an unfortunate time during an upgrade from 10.1 could theoretically make the data directory unrecoverable.
I think that we must try to cover this code in our regression tests. There should already be a debug assertion for catching writes to a wrong-format log file.
Attachments
Issue Links
- relates to
-
MDEV-12353 Efficient InnoDB redo log record format
-
- Closed
-
-
MDEV-14425 Change the InnoDB redo log format to reduce write amplification
-
- Closed
-